Fix button styling issue on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,7 @@ section#about #resume {
 section#about #resume button {
     width: 5em;
     height: 1.75em;
+    padding: 0;
 }
 
 /* Section: Contact */
